add texts and adjust layouts

--- a/public/devenir-membre/index.html
+++ b/public/devenir-membre/index.html
@@ -5,13 +5,15 @@
   lang="fr"
   dir="ltr"
 >
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=59910&amp;path=livereload" data-no-instant defer></script>
+  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="description" content="Que signifie être membre ?
-	Comment adhérer ?
-	Autre" />
+    <meta name="description" content="Comment devenir membre?
+Il suffit de venir nous retrouver à l&rsquo;une de nos rencontres mensuelles (tous les 20 du mois) au rue de l&rsquo;Église 14. Pour des raisons d&rsquo;organisation, merci de nous prévenir par mail à 
+info@fullyentransition.ch.
+	Qu&rsquo;est-ce que cela implique?
+En devenant membre, vous avez la possibilité de vous engager de différentes manières, en fonction de vos possibilités et de vos envies: participer à un groupe de travail sur un projet particulier (exemple: repair café, soirée conférence etc.), et, si vous le souhaitez, proposer et concrétiser un projet qui vous tient à coeur. Vous pouvez également faire partie du comité (cercle de pilotage) en vous engageant à participer tous les 20 du mois aux rencontres mensuelles de l&rsquo;association." />
     <title>
        Devenir membre · Fully en transition 
     </title>
@@ -218,13 +220,21 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item" href="/qui-sommes-nous"> Qui sommes-nous ? </a>
-        <a class="navbar-item" href="/calendar"> Calendrier </a>
-        <a class="navbar-item" href="/actualites"> Actualités </a>
+        <a class="navbar-item" href="/qui-sommes-nous">Qui sommes-nous ?</a>
+        <a class="navbar-item" href="/calendrier">Calendrier</a>
+        <a class="navbar-item" href="/actualites">Actualités</a>
+        <a class="navbar-item" href="/devenir-membre">Devenir Membre</a>
       </div>
 
       <div class="navbar-end">
         <div class="navbar-item">
+          <a
+            class="navbar-item has-text-warning"
+            href="/nous-soutenir"
+            style="padding-left: 0"
+          >
+            Nous Soutenir
+          </a>
           <div class="buttons">
             <a class="button is-warning" href="/contact">
               <strong>Contact</strong>
@@ -237,28 +247,39 @@
 </header>
  
 <section
-  class="hero has-background-primary-15 is-halfheight has-text-centered is-large"
+  class="hero has-background-primary-15 is-halfheight has-text-centered"
   style="background-image: url('/actualites/.jpeg'); background-size: cover; background-position: center;"
 >
   <div class="hero-body">
     <div class="container has-text-centered">
       <div class="container has-text-centered">
         <p class="title has-text-primary-15-invert">Devenir membre</p>
+        <p class="subtitle has-text-primary-15-invert">Rejoignez-nous !</p>
       </div>
     </div>
   </div>
 </section>
 
-<section class="section has-text-centered is-max-desktop">
-  <div class="container is-max-desktop"></div>
-  <div class="container has-text-centered"></div>
-</section>
-
 <section class="section is-max-desktop has-text-centered">
-  <div class="container is-max-desktop">
-    <div class="content">	<h3 id="que-signifie-être-membre-" class="title">Que signifie être membre ?</h3>
-	<h3 id="comment-adhérer-" class="title">Comment adhérer ?</h3>
-	<h3 id="autre" class="title">Autre</h3>
+  <div class="container is-max-desktop columns is-8">
+    <div class="content column has-text-justified">	<h3 id="comment-devenir-membre" class="title">Comment devenir membre?</h3>
+<p>Il suffit de venir nous retrouver à l&rsquo;une de nos rencontres mensuelles (tous les 20 du mois) au rue de l&rsquo;Église 14. Pour des raisons d&rsquo;organisation, merci de nous prévenir par mail à 
+<a
+	href="mailto:info@fullyentransition.ch"
+	
+>info@fullyentransition.ch</a>.</p>
+	<h3 id="quest-ce-que-cela-implique" class="title">Qu&rsquo;est-ce que cela implique?</h3>
+<p>En devenant membre, vous avez la possibilité de vous engager de différentes manières, en fonction de vos possibilités et de vos envies: participer à un groupe de travail sur un projet particulier (exemple: repair café, soirée conférence etc.), et, si vous le souhaitez, proposer et concrétiser un projet qui vous tient à coeur. Vous pouvez également faire partie du comité (cercle de pilotage) en vous engageant à participer tous les 20 du mois aux rencontres mensuelles de l&rsquo;association.</p>
+	<h3 id="être-sympathisante" class="title">Être sympathisant·e</h3>
+<p>Si vous ne souhaitez pas être membre mais souhaitez être informés des évènements par mail, vous pouvez devenir sympathisant en nous faisant la demande sous 
+<a
+	href="mailto:info@fullyentransition.ch"
+	
+>info@fullyentransition.ch</a> ou directement via 
+<a
+	href="/contact"
+	
+>Page de Contact</a></p>
 </div>
   </div>
 </section>
@@ -267,8 +288,9 @@
     <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      <strong> Fully en transition · 2024 </strong>
+      <strong> Fully en transition · 2021 - 2025 </strong>
     </p>
+    <p>Rue de l'Église 14, 1926 Fully</p>
     <div class="container">
       <a href="https://www.instagram.com/fully.transition/">
         <span class="icon is-medium">
