--- a/public/qui-sommes-nous/index.html
+++ b/public/qui-sommes-nous/index.html
@@ -5,13 +5,14 @@
   lang="fr"
   dir="ltr"
 >
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=59910&amp;path=livereload" data-no-instant defer></script>
+  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="description" content="Notre origine
-	Notre mission
-	Nos valeurs" />
+    <meta name="description" content="Des citoyens et citoyennes de Fully
+Nous sommes des citoyens et citoyennes de Fully et ses environs, préoccupés par la fragilisation des conditions d’habitabilité de la Terre ainsi que la capacité des êtres humains à s’adapter aux changements à venir.
+	Nos engagements pour la transition
+Nous avons créé Fully en Transition pour travailler à la résilience de la commune face aux enjeux actuels. Nous soutenons des projets visant à réunir les gens autour de valeurs telles que la solidarité, le respect et l’intelligence collective. Ces projets sensibilisent à l’écoresponsabilité et s’axent autour de thématiques telles que la pollution, la gestion des déchets, la biodiversité, la consommation, la justice sociale, le gaspillage, l’énergie, l’autonomie, etc…" />
     <title>
        Qui sommes-nous ? · Fully en transition 
     </title>
@@ -218,13 +219,21 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item" href="/qui-sommes-nous"> Qui sommes-nous ? </a>
-        <a class="navbar-item" href="/calendar"> Calendrier </a>
-        <a class="navbar-item" href="/actualites"> Actualités </a>
+        <a class="navbar-item" href="/qui-sommes-nous">Qui sommes-nous ?</a>
+        <a class="navbar-item" href="/calendrier">Calendrier</a>
+        <a class="navbar-item" href="/actualites">Actualités</a>
+        <a class="navbar-item" href="/devenir-membre">Devenir Membre</a>
       </div>
 
       <div class="navbar-end">
         <div class="navbar-item">
+          <a
+            class="navbar-item has-text-warning"
+            href="/nous-soutenir"
+            style="padding-left: 0"
+          >
+            Nous Soutenir
+          </a>
           <div class="buttons">
             <a class="button is-warning" href="/contact">
               <strong>Contact</strong>
@@ -237,28 +246,27 @@
 </header>
  
 <section
-  class="hero has-background-primary-15 is-halfheight has-text-centered is-large"
+  class="hero has-background-primary-15 is-halfheight has-text-centered"
   style="background-image: url('/actualites/.jpeg'); background-size: cover; background-position: center;"
 >
   <div class="hero-body">
     <div class="container has-text-centered">
       <div class="container has-text-centered">
         <p class="title has-text-primary-15-invert">Qui sommes-nous ?</p>
+        <p class="subtitle has-text-primary-15-invert">Découvrez notre histoire et nos valeurs</p>
       </div>
     </div>
   </div>
 </section>
 
-<section class="section has-text-centered is-max-desktop">
-  <div class="container is-max-desktop"></div>
-  <div class="container has-text-centered"></div>
-</section>
-
 <section class="section is-max-desktop has-text-centered">
-  <div class="container is-max-desktop">
-    <div class="content">	<h3 id="notre-origine" class="title">Notre origine</h3>
-	<h3 id="notre-mission" class="title">Notre mission</h3>
-	<h3 id="nos-valeurs" class="title">Nos valeurs</h3>
+  <div class="container is-max-desktop columns is-8">
+    <div class="content column has-text-justified">	<h3 id="des-citoyens-et-citoyennes-de-fully" class="title">Des citoyens et citoyennes de Fully</h3>
+<p>Nous sommes des citoyens et citoyennes de Fully et ses environs, préoccupés par la fragilisation des conditions d’habitabilité de la Terre ainsi que la capacité des êtres humains à s’adapter aux changements à venir.</p>
+	<h3 id="nos-engagements-pour-la-transition" class="title">Nos engagements pour la transition</h3>
+<p>Nous avons créé Fully en Transition pour travailler à la résilience de la commune face aux enjeux actuels. Nous soutenons des projets visant à réunir les gens autour de valeurs telles que la solidarité, le respect et l’intelligence collective. Ces projets sensibilisent à l’écoresponsabilité et s’axent autour de thématiques telles que la pollution, la gestion des déchets, la biodiversité, la consommation, la justice sociale, le gaspillage, l’énergie, l’autonomie, etc…</p>
+	<h3 id="notre-fonctionnement" class="title">Notre fonctionnement</h3>
+<p>L’association Fully en Transition existe depuis décembre 2023 et compte aujourd’hui plus de 20 membres. Nous fonctionnons en gouvernance horizontale, avec un cercle de pilotage autour duquel gravitent plusieurs groupes de projet selon les envies et motivations de chacun.e. Les outils que nous utilisons privilégient l’horizontalité, l’écoute, la bienveillance et la souveraineté de ses membres.</p>
 </div>
   </div>
 </section>
@@ -267,8 +275,9 @@
     <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      <strong> Fully en transition · 2024 </strong>
+      <strong> Fully en transition · 2021 - 2025 </strong>
     </p>
+    <p>Rue de l'Église 14, 1926 Fully</p>
     <div class="container">
       <a href="https://www.instagram.com/fully.transition/">
         <span class="icon is-medium">
