--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -5,7 +5,7 @@
   lang="fr"
   dir="ltr"
 >
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=59910&amp;path=livereload" data-no-instant defer></script>
+  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -216,13 +216,21 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item" href="/qui-sommes-nous"> Qui sommes-nous ? </a>
-        <a class="navbar-item" href="/calendar"> Calendrier </a>
-        <a class="navbar-item" href="/actualites"> Actualités </a>
+        <a class="navbar-item" href="/qui-sommes-nous">Qui sommes-nous ?</a>
+        <a class="navbar-item" href="/calendrier">Calendrier</a>
+        <a class="navbar-item" href="/actualites">Actualités</a>
+        <a class="navbar-item" href="/devenir-membre">Devenir Membre</a>
       </div>
 
       <div class="navbar-end">
         <div class="navbar-item">
+          <a
+            class="navbar-item has-text-warning"
+            href="/nous-soutenir"
+            style="padding-left: 0"
+          >
+            Nous Soutenir
+          </a>
           <div class="buttons">
             <a class="button is-warning" href="/contact">
               <strong>Contact</strong>
@@ -234,10 +242,7 @@
   </nav>
 </header>
  
-<section
-  class="hero has-background-primary-15 is-halfheight has-text-centered"
-  style="padding-bottom: 3rem; padding-top: 3rem"
->
+<section class="hero has-background-primary-15 is-halfheight has-text-centered">
   <div class="hero-body">
     <div class="container has-text-centered">
       <p class="title has-text-primary-15-invert" style="margin-bottom: 1rem">
@@ -314,8 +319,9 @@
     <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      <strong> Fully en transition · 2024 </strong>
+      <strong> Fully en transition · 2021 - 2025 </strong>
     </p>
+    <p>Rue de l'Église 14, 1926 Fully</p>
     <div class="container">
       <a href="https://www.instagram.com/fully.transition/">
         <span class="icon is-medium">
